kube-config/service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-nodeport
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 80
      nodePort: 32222
  selector:
    components: frontend
