kube-config/conv-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: conv-api-clusterip
  namespace: conv-app
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
  selector:
    components: backend-conv
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conv-api-ingress
  namespace: conv-app
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - host: conv.test
    http:
      paths:
      - path: "/api"
        pathType: Prefix
        backend:
          service:
            name: conv-api-clusterip
            port:
              number: 3000
      - path: "/uploads"
        pathType: Prefix
        backend:
          service:
            name: conv-api-clusterip
            port:
              number: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
  namespace: conv-app
spec:
  replicas: 1
  selector:
    matchLabels:
      components: backend-conv
  template:
    metadata:
      labels:
        components: backend-conv
    spec:
      containers:
      - name: conv-api
        image: antonlarichev/conv-api:1.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "320Mi"
            cpu: "200m"
        # startupProbe:
        #   exec:
        #     command:
        #     - curl
        #     - --fail
        #     - --max-time
        #     - "10"
        #     - http://localhost:80
        #   timeoutSeconds: 30
        #   periodSeconds: 5
        #   failureThreshold: 3
        # livenessProbe:
        #   exec:
        #     command:
        #     - curl
        #     - --fail
        #     - --max-time
        #     - "10"
        #     - http://localhost:80
        #   initialDelaySeconds: 200
        #   timeoutSeconds: 10
        #   periodSeconds: 5
        #   failureThreshold: 3
        # readinessProbe:
        #   exec:
        #     command:
        #     - curl
        #     - --fail
        #     - --max-time
        #     - "10"
        #     - http://localhost:80
        #   initialDelaySeconds: 200
        #   timeoutSeconds: 10
        #   periodSeconds: 5
        #   failureThreshold: 5
        volumeMounts:
        - name: conv-api-data
          mountPath: /opt/app/uploads
      volumes:
      - name: conv-api-data
        persistentVolumeClaim:
          claimName: conv-api-pvc
