kube-config/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conv-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - host: conv.test
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: conv-app-clusterip
            port:
              number: 80
